# csinvest

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docs.md  init_service.py  inital_fill_database.py  main.py  pyproject.toml  requirements.txt  settings.py  test.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/workflow/: staging.yaml
accounts/: models.py  service.py  views.py
alembic/: script.py.mako
api_responses/: steam_market_search_api.json
api_service/: base.py  steam_community.py
api_service/skinport/: endpoints.py  fetcher.py  preprocessing.py
api_service/steam/: openid.py
asset_stacks/: models.py  service.py  views.py
assets/: models.py  service.py  views.py
auth/: jwt.py  models.py  views.py
buyin_stacks/: models.py  service.py
data_service/: data_acquisition.py
data_service/auth/: jwt.py  models.py  views.py
database/: __init__.py  base.py  session.py
database/migrations/: env.py
db_service/: __init__.py  base.py  session.py
db_service/accounts/: schema.py  service.py
fastapi/: accounts.sql  alembic_version.sql  assets.sql  assetstacks.sql  items.sql  pricehistories.sql  skinport_pricehistories.sql  users.sql  vendor_offers.sql  vendors.sql
items/: models.py  service.py  views.py
price_histories/: models.py  service.py
prices/: models.py  service.py
static/: README.md  index.html  package-lock.json  package.json
users/: models.py  service.py
vendor_offers/: models.py  service.py
vendors/: models.py  service.py
(+118 files in other folders)
